# drf-auth

./: Readme.md  docker-compose.yml  pyproject.toml
blog_api/: settings.py  urls.py
post/: models.py  tests.py  views.py
post/migrations/: 0002_alter_post_rating.py
